@@ -1,4 +1,8 @@
-﻿drkns 25.03.2016 01:21:22 +0200 - build 4600
+﻿drkns 25.03.2016 10:08:48 +0200 - build 4601
+
+1. Уточнение 4599.
+
+drkns 25.03.2016 01:21:22 +0200 - build 4600
 
 1. Уточнение 4574.
 
